# wasm-base-components

./: .gitignore  .releaserc.json  CHANGELOG.md  Justfile  README.md  package.json
.github/: GITHUB_PACKAGES.md  SEMANTIC_RELEASE.md
.github/workflows/: ci.yml  deploy.yaml  publish.yaml  release.yaml
deploy/: .gitignore  README.md  index.ts  keyvault-list-generate.js  keyvault-secrets-generate.js  package.json  render.ts  template.wadm.yaml  wadm.yaml
helper/data-api/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
helper/data-api/component/: Cargo.toml  README.md  wasmcloud.toml
helper/data-api/component/src/: lib.rs
helper/data-api/component/wit/: world.wit
helper/data-api/src/: main.rs  provider.rs
helper/data-api/test-component/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
helper/data-api/test-component/src/: lib.rs
helper/data-api/test-component/wit/: deps.toml  world.wit
helper/data-api/wit/: world.wit
helper/http-wrapper/: Cargo.toml  wadm.yml  wasmcloud.toml
helper/http-wrapper/src/: lib.rs
helper/http-wrapper/wit/: world.wit
helper/log-to-stdout/: Cargo.toml  Justfile  README.md  function.json
helper/log-to-stdout/src/: lib.rs
helper/log-to-stdout/wit/: world.wit
integration-test/: README.md  mix.exs  wadm.test.yaml
integration-test/components/fetcher/: Cargo.toml  wasmcloud.toml
integration-test/components/fetcher/src/: lib.rs
integration-test/components/fetcher/wit/: world.wit
integration-test/config/: config.exs
integration-test/lib/: actions_providers.ex
integration-test/lib/data_grpc/: endpoint.ex  proto.ex  server.ex
integration-test/test/: actions_providers_test.exs  test_helper.exs
integration-test/test/support/: wasm_services.ex
providers/data-api/: Cargo.toml  build.rs  wasmcloud.toml
providers/data-api/proto/: data-api.proto
providers/data-api/src/: main.rs  provider.rs
providers/data-api/wit/: world.wit
providers/key-vault/: Cargo.toml  wadm.edge.yaml  wadm.local.yaml  wasmcloud.toml
providers/key-vault/key-vault-tester/: Cargo.toml  wasmcloud.toml
providers/key-vault/key-vault-tester/src/: lib.rs
providers/key-vault/key-vault-tester/wit/: world.wit
providers/key-vault/src/: main.rs  provider.rs
providers/key-vault/wit/: world.wit
providers/smtp-provider/: Cargo.toml  README.md  send.sh  wadm.test.yaml  wadm.yaml  wasmcloud.toml
providers/smtp-provider/component/: Cargo.toml  Justfile  README.md  wasmcloud.toml
providers/smtp-provider/component/src/: lib.rs
providers/smtp-provider/component/wit/: deps.toml  world.wit
providers/smtp-provider/src/: main.rs  provider.rs
providers/smtp-provider/tests/: smtp_integration_test.rs
providers/smtp-provider/wit/: world.wit
