[package]
name = "mock-graphql-provider"
version = "0.1.0"
edition = "2021"
description = """
A simple mock graphql provider.
"""

[workspace]


[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"
