[package]
name = "data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = "0.12.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"
prost = "0.13"
tonic = "0.13.0"
jaws-rs = { git = "ssh://git@gitlab.betty.services/code/jaws-rs.git", version = "0.1.0" }
rand = "0.9.0"

[build-dependencies]
tonic-build = "0.13.0"
