[package]
name = "key-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"
azure_identity = "0.28.0"
azure_security_keyvault_secrets = "0.7.0"
futures = "0.3.31"
serde_json = "1.0"
moka = { version = "0.12.11", features = ["future"] }
