[package]
name = "smtp-provider"
version = "0.1.0"
edition = "2021"
description = """
A provider for SMTP
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1"
html2text = "0.15.5"
lettre = { version = "0.11.18", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls", "ring", "rustls-platform-verifier"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"

[dev-dependencies]
testcontainers = "0.25.0"
serde_yaml_ng = "0.10.0"
wadm-client = "0.10.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
futures = "0.3.31"
serial_test = "3.2.0"
